crates/swc_ecma_parser/tests/test262-error-references/fail/851bfeb09635c752.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/851bfeb09635c752.js:1:1
  |
1 | 1++
  | ^

